# simple-rag-system

./: .gitignore  README.md  pyproject.toml
chroma_db/16c1ee0b-0ee2-40e3-a31a-456d41545fab/: index_metadata.pickle
src/: database.py  generator.py  ingest.py  main.py
utils/: debug_folders.py  test_ingest.py
