[project]
name = "simple-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.9.0",
    "ipykernel>=7.3.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
]
